# ftp2telegram

./: README.md  pyproject.toml  setup.py
doc/: example-config.yml
ftp2telegram/: __init__.py  cli.py  config.py
