[tool.poetry]
name = "ftp2telegram"
version = "0.1"
description = "An FTP server that forwards uploaded files to Telegram users"
authors = ["Tomas Bayer <mail@tomas.berlin>"]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
ftp2telegram = 'ftp2telegram.cli:run'

[tool.poetry.dependencies]
python = "^3.9"
cerberus = "^1.3.4"
ftprelay = "^0.1"
pyyaml = "^6.0"
telepot = "^12.7"

[tool.poetry.dev-dependencies]
pytest = "^7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
